==> UweBonnes/ethernut/nut/arch/cm3/dev/nxp/lpc176x_gpio.c <==
#include <cfg/os.h>
#include <cfg/arch.h>
#include <cfg/arch/gpio.h>
#include <sys/nutdebug.h>
#include <arch/cm3.h>
#include <arch/cm3/nxp/lpc176x_gpio.h>
#include <dev/gpio.h>
#include <string.h>
#include <stdlib.h>
#define NUTGPIOPORT_MAX NUTGPIO_PORT4+1

uint32_t GpioPinConfigGet(int bank, int bit)
{
    uint32_t rc = 0;
    int      pin_offset;

    __IO uint32_t *PINSEL;
    __IO uint32_t *PINMODE;
    __IO uint32_t *PINMODE_OD;

    NUTASSERT(bank < NUTGPIOPORT_MAX);
    NUTASSERT(bit < 32);

    /*
     * PINSEL
     *
     * 00   GPIO
     * 01   Peripheral 1 AF
     * 10   Peripheral 2 AF
     * 11   Peripheral 3 AF
     *
     * PINMODE
     *
     * 00   Pullup enabled
     * 01   Repeater mode
     * 10   Neither pullup nor pulldown enabled
     * 11   Pulldown enabled
     */

    if (bit < 16) {
        PINSEL  = (uint32_t *)&LPC_PINCON->PINSEL0 + bank * 2;
        PINMODE = (uint32_t *)&LPC_PINCON->PINMODE0 + bank * 2;
        pin_offset = bit * 2;
    } else {
        PINSEL  = (uint32_t *)&LPC_PINCON->PINSEL0 + bank * 2 + 1;
        PINMODE = (uint32_t *)&LPC_PINCON->PINMODE0 + bank * 2 + 1;
        pin_offset = (bit - 16) * 2;
    }

    PINMODE_OD = (uint32_t *)&LPC_PINCON->PINMODE_OD0 + bank;

    if (CM3BBREG(GPIO_BANKID2BASE(bank), LPC_GPIO_TypeDef, FIODIR, bit)) {
        rc |= GPIO_CFG_OUTPUT;
    }

    switch ((*PINSEL >> pin_offset) & 0x03) {
        case PINCON_PINSEL_AF0:
            /* GPIO mode selected */
            rc |= GPIO_CFG_PERIPHERAL0;
            break;
        case PINCON_PINSEL_AF1:
            /* AF1 selected */
            rc |= GPIO_CFG_PERIPHERAL1 | GPIO_CFG_DISABLED;
            break;
        case PINCON_PINSEL_AF2:
            /* AF1 selected */
            rc |= GPIO_CFG_PERIPHERAL2 | GPIO_CFG_DISABLED;
            break;
        case PINCON_PINSEL_AF3:
            /* AF1 selected */
            rc |= GPIO_CFG_PERIPHERAL3 | GPIO_CFG_DISABLED;
            break;
    }

    switch ((*PINMODE >> pin_offset) & 0x03) {
        case PINCON_PINMODE_PULLUP:
            /* Pullup mode selected */
            rc |= GPIO_CFG_PULLUP;
            break;
        case PINCON_PINMODE_REPEATER:
            /* Repeater mode selected */
            rc |= GPIO_CFG_REPEATER;
            break;
        case PINCON_PINMODE_NORMAL:
            /* Neither pullup not pulldown */
            break;
        case PINCON_PINMODE_PULLDOWN:
            /* AF1 selected */
            rc |= GPIO_CFG_PULLDOWN;
            break;
    }

    if (*PINMODE_OD & bit) {
        rc |= GPIO_CFG_MULTIDRIVE;
    }

    return rc;
}

int GpioPinConfigSet(int bank, int bit, uint32_t flags)
{
    uint32_t mode;
    uint32_t sel;
    int      pin_offset;

    __IO uint32_t *PINSEL_L;
    __IO uint32_t *PINSEL_H;
    __IO uint32_t *PINMODE_L;
    __IO uint32_t *PINMODE_H;
    __IO uint32_t *PINMODE_OD;

    NUTASSERT(bank < NUTGPIOPORT_MAX);
    NUTASSERT(bit < 32);

    /*
     * PINSEL
     *
     * 00   GPIO
     * 01   Peripheral 1 AF
     * 10   Peripheral 2 AF
     * 11   Peripheral 3 AF
     *
     * PINMODE
     *
     * 00   Pullup enabled
     * 01   Repeater mode
     * 10   Neither pullup nor pulldown enabled
     * 11   Pulldown enabled
     */

    PINSEL_L   = (uint32_t *)&LPC_PINCON->PINSEL0 + bank * 2;
    PINSEL_H   = PINSEL_L + 1;

    PINMODE_L  = (uint32_t *)&LPC_PINCON->PINMODE0 + bank * 2;
    PINMODE_H  = PINMODE_L + 1;

    PINMODE_OD = (uint32_t *)&LPC_PINCON->PINMODE_OD0 + bank;

    /* Read current settings */
    if (bit < 16) {
        sel  = *PINSEL_L;
        mode = *PINMODE_L;
        pin_offset = bit * 2;
    } else {
        sel  = *PINSEL_H;
        mode = *PINMODE_H;
        pin_offset = (bit - 16) * 2;
    }

    sel  &= ~(PINCON_PINSEL_MASK << pin_offset);
    mode &= ~(PINCON_PINMODE_MASK << pin_offset);

    /* skip flag GPIO_CFG_PERIPHERAL0 */
    if ((flags & GPIO_CFG_PERIPHERAL_MASK) == GPIO_CFG_PERIPHERAL1) {
        sel |= PINCON_PINSEL_AF1 << pin_offset;
    } else
    if ((flags & GPIO_CFG_PERIPHERAL_MASK) == GPIO_CFG_PERIPHERAL2) {
        sel |= PINCON_PINSEL_AF3 << pin_offset;
    } else
    if ((flags & GPIO_CFG_PERIPHERAL_MASK) == GPIO_CFG_PERIPHERAL3) {
        sel |= PINCON_PINSEL_AF3 << pin_offset;
    }

    if (flags & GPIO_CFG_PULLUP) {
        mode |= PINCON_PINMODE_PULLUP << pin_offset;
    } else
    if (flags & GPIO_CFG_REPEATER) {
        mode |= PINCON_PINMODE_REPEATER << pin_offset;
    } else
    if (flags & GPIO_CFG_PULLDOWN) {
        mode |= PINCON_PINMODE_PULLDOWN << pin_offset;
    } else {
        mode |= PINCON_PINMODE_NORMAL << pin_offset;
    }

    /* Write back the modified register values */
    if (bit < 16) {
        *PINSEL_L  = sel;
        *PINMODE_L = mode;
    } else {
        *PINSEL_H  = sel;
        *PINMODE_H = mode;
    }

    if (flags & GPIO_CFG_OUTPUT) {
        CM3BBREG(GPIO_BANKID2BASE(bank), LPC_GPIO_TypeDef, FIODIR, bit) = 1;
    } else {
        CM3BBREG(GPIO_BANKID2BASE(bank), LPC_GPIO_TypeDef, FIODIR, bit) = 0;
    }

    if (flags & GPIO_CFG_MULTIDRIVE) {
        *PINMODE_OD |= _BV(bit);
    } else {
        *PINMODE_OD &= ~_BV(bit);
    }

    return 0;

}

int GpioRegisterIrqHandler(GPIO_SIGNAL * sig, int bit, void (*handler) (void *), void *arg)
{
    int rc = 0;

    if (sig->ios_vector == 0) {
        /* This is the first call. Allocate the vector table. */
        sig->ios_vector = malloc(sizeof(GPIO_VECTOR) * 32);
        if (sig->ios_vector) {
            memset(sig->ios_vector, 0, sizeof(GPIO_VECTOR) * 32);
            /* Register our internal PIO interrupt service. */
            if (sig_PIO.ir_handler == NULL) {
                rc = NutRegisterIrqHandler(&sig_PIO, sig->ios_handler, NULL);
                if (rc == 0) {
                    /* Clear any pending interrupts */
                    LPC_GPIOINT->IO0IntClr = 0xFFFFFFFF;
                    LPC_GPIOINT->IO2IntClr = 0xFFFFFFFF;

                    rc = NutIrqEnable(&sig_PIO);
                }
            }
        }
        else {
            return -1;
        }
    }
    sig->ios_vector[bit].iov_handler = handler;
    sig->ios_vector[bit].iov_arg = arg;

    return rc;
}
